# shitty_game_engine

./: .gitignore  CMakeLists.txt  Makefile  build.sh
dep/SDL3-3.2.20/i686-w64-mingw32/lib/cmake/SDL3/: SDL3ConfigVersion.cmake
dep/SDL3-3.2.20/i686-w64-mingw32/lib/pkgconfig/: sdl3.pc
dep/SDL3-3.2.20/x86_64-w64-mingw32/lib/cmake/SDL3/: SDL3ConfigVersion.cmake
dep/SDL3_image-3.2.4/cmake/: SDL3_imageConfig.cmake  SDL3_imageConfigVersion.cmake
dep/SDL3_image-3.2.4/i686-w64-mingw32/lib/cmake/SDL3_image/: SDL3_image-shared-targets.cmake
dep/SDL3_image-3.2.4/x86_64-w64-mingw32/lib/cmake/SDL3_image/: SDL3_imageConfig.cmake
src/: App.cpp  App.h  GameLoop.cpp  GameLoop.h  LTexture.cpp  LTexture.h  main.cpp  utility.cpp  utility.h
